Update 'v7b5qwsc1-python' component image to: quay.io/rhtap_qe/rhtap-qe:e81c06a2545da00783c5741dd414aae45552dd03@sha256:d0b8b9c8d03b0e749f1e56825df9b6f7d9362cd11d847cebfe1de513744dd69c

--- a/components/v7b5qwsc1-python/overlays/development/deployment-patch.yaml
+++ b/components/v7b5qwsc1-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: v7b5qwsc1-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:e81c06a2545da00783c5741dd414aae45552dd03@sha256:d0b8b9c8d03b0e749f1e56825df9b6f7d9362cd11d847cebfe1de513744dd69c
+          name: container-image
